<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="br.com.luckez.tcc.CompraActivity" >

    <item 
        android:id="@+id/action_capture"
        android:orderInCategory="1"
        android:showAsAction="ifRoom"
        android:title="@string/capture"
        android:icon="@drawable/ic_action_camera"/>
    
    <item 
        android:id="@+id/action_add"
        android:orderInCategory="2"
        android:showAsAction="ifRoom"
        android:title="@string/Adicionar"
        android:icon="@drawable/ic_action_new"/>
    
    
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"
        android:icon="@drawable/ic_action_settings"/>

</menu>
