<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/back1small">
	    
	<Button android:layout_width="match_parent"
	    android:layout_height="0dp"
	    android:textColor="@android:color/white"
	    android:drawableStart="@drawable/ic_cart_add"
	    android:drawableLeft="@drawable/ic_cart_add"
	    android:drawablePadding="0dp"
	    android:gravity="center"
	    android:layout_gravity="center"
	    android:paddingLeft="30dp"
	    android:paddingRight="30dp"
	    android:text="@string/nova_compra"
	    android:textSize="50sp"
	    android:layout_weight="2"
	    android:background="@drawable/buttonshape"
	    android:onClick="goToSupermercadoActivity"
	    android:layout_margin="10dp"/>
	
	<LinearLayout android:layout_width="match_parent"
	    android:layout_height="0dp"
	    android:layout_weight="2"
	    android:orientation="horizontal"
	    android:paddingBottom="10dp"
	    android:paddingRight="10dp"
	    android:paddingLeft="10dp">
	    
		<Button android:layout_width="0dp"
		    android:layout_weight="1"
		    android:layout_height="match_parent"
		    android:text="@string/minhas_compras"
		    android:textSize="35sp"
		    android:paddingTop="20dp"
		    android:background="@drawable/buttonshape"
		    android:textColor="@android:color/white"
	    	android:drawableTop="@drawable/ic_cart"
		    android:layout_marginRight="5dp"
		    android:gravity="center_vertical|center_horizontal"
		    android:layout_gravity="center_vertical|center_horizontal"
		    android:onClick="goToMinhasCompras"/>
	
		<Button android:layout_width="0dp"
		    android:gravity="center"
		    android:layout_gravity="center"
		    android:paddingTop="20dp"
		    android:layout_weight="1"
		    android:layout_height="match_parent"
		    android:text="@string/meus_produtos"
		    android:background="@drawable/buttonshape"
		    android:textSize="35sp"
		    android:textColor="@android:color/white"
	    	android:drawableTop="@drawable/ic_shopping_basket"
		    android:onClick="goToMeusProdutos"
		    android:layout_marginLeft="5dp"
		    android:layout_marginStart="5dp"/>    
		
	</LinearLayout>
		
		<Button android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:text="Utilidades" 
		    android:visibility="gone"
		    android:onClick="goToUtilidades"/>
	
	<LinearLayout android:layout_width="match_parent"
	    android:layout_height="0dp"
	    android:layout_weight="1"
	    android:gravity="center_vertical|center_horizontal"
	    >
	    
		<Button android:layout_width="180dp"
		    android:layout_height="wrap_content"
		    android:textColor="@android:color/white"
	    	android:drawableStart="@drawable/ic_info"
	    	android:drawableLeft="@drawable/ic_info"
	    	android:paddingLeft="10dp"
	    	android:paddingStart="10dp"
	    	android:textSize="30sp"
		    android:text="Sobre"
		    android:background="@drawable/buttonshape"
		    
		    android:onClick="goToAbout"/>
	
	</LinearLayout>
		
</LinearLayout>
